<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.modelcontextprotocol.sdk</groupId>
	<artifactId>mcp-parent</artifactId>
	<version>0.17.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<url>https://github.com/modelcontextprotocol/java-sdk</url>
	<scm>
		<url>https://github.com/modelcontextprotocol/java-sdk</url>
		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
	</scm>
	<name>Java SDK MCP Parent</name>
	<description>Java SDK for the Model Context Protocol (MCP), enabling interaction with AI models and tools through a standardized interface</description>
	<organization>
		<name>Anthropic</name>
		<url>https://www.anthropic.com</url>
	</organization>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Christian Tzolov</name>
		</developer>
		<developer>
			<name>Dariusz Jędrzejczyk</name>
		</developer>
	</developers>
	<issueManagement>
		<system>Github Issues</system>
		<url>https://github.com/modelcontextprotocol/java-sdk/issues</url>
	</issueManagement>
	<ciManagement>
		<system>Github Actions</system>
		<url>https://github.com/modelcontextprotocol/java-sdk/actions</url>
	</ciManagement>
	<properties>
		<!-- Java/Compiler -->
		<java.version>8</java.version>
		<!-- Spring Framework per Java 8 -->
		<springframework.version>5.3.31</springframework.version>
		<!-- Testing compatibili Java 8 -->
		<junit.version>5.10.2</junit.version>
		<junit-jupiter.version>5.10.5</junit-jupiter.version>
		<mockito.version>4.11.0</mockito.version>
		<byte-buddy.version>1.12.23</byte-buddy.version>
		<testcontainers.version>1.17.6</testcontainers.version>
		<awaitility.version>4.2.0</awaitility.version>
		<!-- JSON/Assert -->
		<assertj.version>3.27.6</assertj.version> <!-- correzione: 'assertj', non 'assert4j' -->
		<json-unit-assertj.version>4.1.0</json-unit-assertj.version>
		<jackson.version>2.13.5</jackson.version>
		<json-schema-validator.version>2.0.0</json-schema-validator.version> <!-- linea Java 8 -->
		<!-- Logging -->
		<slf4j-api.version>1.7.36</slf4j-api.version>
		<logback.version>1.2.13</logback.version>
		<!-- Servlet/Tomcat per Java 8 -->
		<javax.servlet.version>3.1.0</javax.servlet.version> <!-- usa javax, NON jakarta -->
		<tomcat.version>9.0.87</tomcat.version>
		<!-- Plugin versions -->
		<spring-javaformat-maven-plugin.version>0.0.36</spring-javaformat-maven-plugin.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
		<bnd-maven-plugin.version>6.3.1</bnd-maven-plugin.version> <!-- stabile su JDK8 -->
		<!-- Plugin versions (usate nel parent) -->
		<maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
		<maven.compiler.release>8</maven.compiler.release>
		<surefireArgLine/>

 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

	</properties>
	<modules>
		<module>mcp-bom</module>
		<module>mcp</module>
		<module>mcp-core</module>
		<module>mcp-json-jackson2</module>
		<module>mcp-json</module>
		<module>mcp-spring/mcp-spring-webflux</module>
		<module>mcp-spring/mcp-spring-webmvc</module>
		<module>mcp-test</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>${spring-javaformat-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<inherited>true</inherited>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<compilerArgs>
						<compilerArg>-parameters</compilerArg>
					</compilerArgs>
				</configuration>
				<executions>
					<!-- Replacing default-compile as it is treated specially by Maven -->
					<execution>
						<id>default-compile</id>
						<phase>none</phase>
					</execution>
					<!-- Replacing default-testCompile as it is treated specially by Maven -->
					<execution>
						<id>default-testCompile</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>java-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>java-test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.8.0</version>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<useFile>false</useFile>
					<trimStackTrace>false</trimStackTrace>
					<!-- Show test timing information -->
					<reportFormat>plain</reportFormat>
					<!-- Output test execution times in the logs -->
					<redirectTestOutputToFile>false</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>generate-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
						<configuration>
							<updatePomFile>true</updatePomFile>
							<flattenMode>ossrh</flattenMode>
							<pomElements>
								<distributionManagement>remove</distributionManagement>
								<dependencyManagement>remove</dependencyManagement>
								<repositories>remove</repositories>
								<scm>keep</scm>
								<url>keep</url>
								<organization>resolve</organization>
							</pomElements>
						</configuration>
					</execution>
					<execution>
						<id>clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>javadoc</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<configuration>
							<detectJavaApiLink>false</detectJavaApiLink>
							<failOnError>false</failOnError>
							<doclint>none</doclint>
							<additionalOptions>
								<additionalOption>-Xdoclint:none</additionalOption>
							</additionalOptions>
							<source>${java.version}</source>
							<quiet>true</quiet>
						</configuration>
						<executions>
							<execution>
								<id>generate-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
							<execution>
								<id>generate-aggregate-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.7.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.7</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
									<passphrase>${env.MAVEN_GPG_PASSPHRASE}</passphrase>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>

 <dependency>
      <groupId>org.apache.maven.reporting</groupId>
      <artifactId>maven-reporting-api</artifactId>
      <version>3.1.1</version>
    </dependency>

			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-bom</artifactId>
				<version>2024.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<repository>
			<id>maven-central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
</project>
